# Gladius

./: MANIFEST.in  README.md  debug_claude_cli.py  gladius-course.html  requirements.txt
.jules/: bolt.md
Google_Gladius/: .gitignore  CURRENT_STATUS.md  ENHANCEMENT_PROJECT_PATH.md  IMPLEMENTATION_PLAN_USER_REQUESTS.md  MANIFEST.in  PHASE_1_2_COMPLETE.md  PHASE_1_COMPLETE.md  PHASE_2_COMPLETE.md  PHASE_3_4_COMPLETE.md  PROJECT_COMPLETE.md  PYDANTIC_VALIDATION_FIX.md  QUICKSTART.md  README.md  package-lock.json  pyproject.toml  pytest.ini  requirements.txt
Google_Gladius/.claude/: settings.local.json
Google_Gladius/prompts/: reviewer_prompt.txt
Google_Gladius/scripts/: IMPLEMENTATION_PLAN.md  __init__.py  gladius.py  projectPlan_README.md  run_pipeline.py
Google_Gladius/src/: orchestrator.py
Google_Gladius/src/agents/: base_agent.py  implementer_agent.py  planner_agent.py  reviewer_agent.py
Google_Gladius/src/claude_client/: cli_invoker.py
Google_Gladius/src/mcp/: __init__.py  mcp_client.py
Google_Gladius/src/request_processor/: request_adapter.py
Google_Gladius/src/schemas/: __init__.py  reviewer_schema.py
Google_Gladius/src/utils/: ascii_art.py  config.py  path_resolver.py  path_validator.py
Google_Gladius/tests/: test_agents.py  test_integration.py
Google_Gladius/tests/fixtures/: tickets.py
Google_Gladius/tests/unit/: test_path_resolver.py  test_request_adapter.py  test_request_parser.py
docs/: DEBUG_GUIDE.md  PROJECT_SUMMARY.md
scripts/: gladius.py  run_pipeline.py
src/: __init__.py
tests/: test_agents.py  test_integration.py
(+29 files in other folders)
